# hyperrouter

./: .gitignore  README.clc  README.md  conftest.py  metadata.ttup.toml  pyproject.toml
.github/workflows/: on_pr-run_cicd.yaml  on_release-publish_pypi.yaml  on_trigger-publish_pypi_test.yaml
sidecars_py/hyperrouter_testutils/: pyproject.toml
tests_py/: hyperrouter.e2e.test.py
