[project]
name = "hyperrouter_testutils"
description = "Test utils for hyperrouter"
authors = []
dynamic = ["version"]
requires-python = ">= 3.12"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"
fallback_version = "0.0.0.dev"

[tool.pdm.build]
package-dir = "src_py"
